[gd_scene load_steps=11 format=3 uid="uid://l660nwqrb5sp"]

[ext_resource type="Script" path="res://scenes/main/Settings.gd" id="1_wug6m"]
[ext_resource type="Shader" path="res://scenes/ui/wavy_text.gdshader" id="3_pqdbp"]

[sub_resource type="Shader" id="Shader_r3n1t"]
code = "shader_type canvas_item;

uniform float lod: hint_range(0.0, 5) = 1.5;
uniform sampler2D SCREEN_TEXTURE: hint_screen_texture, filter_linear_mipmap;

void fragment() {
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, lod);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_03kuj"]
shader = SubResource("Shader_r3n1t")
shader_parameter/lod = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_skfqu"]
shader = ExtResource("3_pqdbp")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gln66"]
shader = ExtResource("3_pqdbp")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cb08g"]
shader = ExtResource("3_pqdbp")

[sub_resource type="Animation" id="Animation_rbbdm"]
resource_name = "background_blur"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_we5tl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8gmkh"]
_data = {
"RESET": SubResource("Animation_we5tl"),
"background_blur": SubResource("Animation_rbbdm")
}

[node name="Settings" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wug6m")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_03kuj")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -236.0
offset_top = -176.0
offset_right = 236.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(236, 176)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "SETTINGS"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "VOLUME"

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
material = SubResource("ShaderMaterial_skfqu")
layout_mode = 2
size_flags_horizontal = 6
text = "Master"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 6

[node name="MasterSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -30.0
max_value = 10.0
step = 0.5

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
material = SubResource("ShaderMaterial_gln66")
layout_mode = 2
size_flags_horizontal = 4
text = "Music"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_top = 6

[node name="MusicSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = -30.0
max_value = 10.0
step = 0.5

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
material = SubResource("ShaderMaterial_cb08g")
layout_mode = 2
size_flags_horizontal = 6
text = "SFX"

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_top = 6

[node name="SFXSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/MarginContainer3"]
unique_name_in_owner = true
layout_mode = 2
min_value = -30.0
max_value = 10.0
step = 0.5

[node name="MarginContainer5" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="ReturnButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer5"]
unique_name_in_owner = true
layout_mode = 2
text = "Return"

[node name="MarginContainer6" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer6"]
unique_name_in_owner = true
layout_mode = 2
text = "Exit Game"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8gmkh")
}
